add description name to meta tag for seo

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta
       charset="utf-8"
+      name="description"
       content="Native Planet offers expert native landscaping services in St. Louis, Missouri. Sustainable solutions to transform your outdoor spaces."
     />
     <title>Native Planet - Native Landscaping in St. Louis</title>
