--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-0RQEL48EFY"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-0RQEL48EFY");
+  </script>
   <body>
     <app-root></app-root>
   </body>
